--- a/_pages/collection-archive.html
+++ b/_pages/collection-archive.html
@@ -16,7 +16,7 @@ author_profile: true
     {% endif %}
   {% endunless %}
   {% for post in collection.docs %}
-    {% unless post.output == false or collection.label == "posts" %}
+    {% if post.output == true %}
       {% include archive-single.html %}
     {% endunless %}
   {% endfor %}
