--- a/_pages/collection-archive.html
+++ b/_pages/collection-archive.html
@@ -1,6 +1,6 @@
 ---
 layout: archive
-title: "Portfolio"
+title: "Posts by Collection"
 permalink: /collection-archive/
 author_profile: true
 ---
@@ -16,7 +16,7 @@ author_profile: true
     {% endif %}
   {% endunless %}
   {% for post in collection.docs %}
-    {% unless post.output == false or collection.label == "posts" %}
+    {% unless collection.output == false or collection.label == "posts" %}
       {% include archive-single.html %}
     {% endunless %}
   {% endfor %}
